Создал проект на Spring Boot. Перенастроил настройки, перенес классы и интерфейсы, добавил нужные зависимости в pom.xml. Протестировал работу приложения.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/Task231
+spring.datasource.username=postgres
+spring.datasource.password=admin
+server.port=8086
